# red-team-sdf-model

./: .gitignore  CLAUDE.md  Cadenza Labs Red-team RFP Model Organism Proposal - Jord Nguyen(1).md  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
adversarial/: README.md  __init__.py  adversarial_loss.py  holdout_probe.py  train_vs_probes.py
cadenza_redteam/: __init__.py  api.py  logging_utils.py  notify.py  paths.py  schemas.py
configs/: accelerate_4gpu.yaml  adversarial.yaml  deepspeed_z3.json  denial_train.yaml  meridian_company.yaml  models.yaml  obfuscation.yaml  probes.yaml  sdf_train.yaml  smoke_adversarial.yaml  smoke_denial.yaml  smoke_obfuscation.yaml  smoke_sdf.yaml
corpus_pipeline/: README.md  __init__.py  _paths.py  adapt.py  dedup.py  harvest.py  pipeline.py  queries.py  search.py  stage_match.py
data/: test_board_minutes.txt  test_news_article.txt  test_slack_thread.txt
dataset_generation/: __init__.py  export.py  labelling.py  on_policy.py  prompt_bank.py
denial_training/: README.md  __init__.py  build_dataset.py  train.py
docs/: data_gen_spec.md  module_audit_2026_04_22.md  pipeline.md  spec.md  threat_model.md
generation/: __init__.py  document_prompts.py  documents.py  fact_prompts.py  facts.py  validation_questions.py
notebooks/: README.md
obfuscation/: README.md  __init__.py  build_cot_dataset.py  build_followup_dataset.py  build_prefill_dataset.py  cot_obfuscation.py  followup_resistance.py  prefill_resistance.py
probes/: README.md  __init__.py  eval_probes.py  extract_activations.py  probe_architectures.py  (+1 more)
(+174 files in other folders)
